Feature: validate weakness of password
