# src/controllers/AdminController.js
@@ -11,6 +11,7 @@ const API_RESULTS = require('../constants/apiResults');
 const emailClient = require('../utils/emailClient')
 const { SETTINGS } = require('../../settings');
 const EMAIL_STATUSES = require('../constants/emailStatuses');
+const validatePassword = require('../utils/validatePassword');
 
 const userChangePassword = async (req, res) => {
     /*
@@ -36,10 +37,15 @@ const userChangePassword = async (req, res) => {
     }
 
     #swagger.responses[400] = { 
-        description: "Musisz przekazać hasło",
-        schema: {
-            error: 'ERR_PROVIDE_PASSWORD_FIELD'
-        }  
+        description: "Musisz przekazać wszystkie poprawne dane",
+        schema: { 
+            error: ['ERR_WEAK_PASSWORD', 'ERR_PROVIDE_PASSWORD_FIELD'],
+            PASSWORD_MIN_CHARS: 8,
+            PASSWORD_MIN_SMALL_LETTERS: 1,
+            PASSWORD_MIN_BIG_LETTERS: 1,
+            PASSWORD_MIN_DIGITS: 1,
+            PASSWORD_MIN_SPECIAL_CHARS: 1
+        }   
     }
 
     #swagger.responses[200] = { 
@@ -60,7 +66,30 @@ const userChangePassword = async (req, res) => {
             return res.status(API_RESULTS.ERR_PROVIDE_PASSWORD_FIELD.status_code).json({ error: API_RESULTS.ERR_PROVIDE_PASSWORD_FIELD.code });
         }
 
-        // TODO: tutaj może jeszcze sprawdzać, czy hasło nie jest zbyt proste
+
+        const { lowercaseCount, uppercaseCount, digitsCount, specialCharCount } = validatePassword(new_password)
+
+        const minCharsCount = await getAppSetting(APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_CHARS.key)
+        const minLowercaseCount = await getAppSetting(APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_SMALL_LETTERS.key)
+        const minUppercaseCount = await getAppSetting(APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_BIG_LETTERS.key)
+        const minDigitsCount = await getAppSetting(APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_DIGITS.key)
+        const minSpecialcharsCount = await getAppSetting(APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_SPECIAL_CHARS.key)
+
+        if (new_password.length < minCharsCount || 
+            lowercaseCount < minLowercaseCount || 
+            uppercaseCount < minUppercaseCount || 
+            digitsCount < minDigitsCount || 
+            specialCharCount < minSpecialcharsCount) {
+
+            return res.status(API_RESULTS.ERR_WEAK_PASSWORD.status_code).json({ 
+                error: API_RESULTS.ERR_WEAK_PASSWORD.code,
+                [APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_CHARS.key]: parseInt(minCharsCount),
+                [APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_SMALL_LETTERS.key]: parseInt(minLowercaseCount),
+                [APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_BIG_LETTERS.key]: parseInt(minUppercaseCount),
+                [APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_DIGITS.key]: parseInt(minDigitsCount),
+                [APP_CONFIGURATION_DEFAULT.PASSWORD_MIN_SPECIAL_CHARS.key]: parseInt(minSpecialcharsCount)
+            });
+        }
 
         const user = await User.findByPk(user_id)
 
